# service/src/app.ts
@@ -1,7 +1,6 @@
 import * as bodyParser from 'body-parser';
 import * as cors from 'cors';
 import * as express from 'express';
-import * as fs from 'fs';
 import * as schedule from 'node-schedule';
 import * as path from 'path';
 import * as swagger from 'swagger-ui-express';
@@ -10,6 +9,7 @@ import * as yargs from 'yargs';
 import { IMonitorService } from './interfaces/monitor-service';
 import { container } from './ioc';
 import { GoogleAuthenticationMiddleware } from './middleware/google-authentication';
+import { CheckRouter } from './routes/check';
 import { UserRouter } from './routes/user';
 import { WebsiteRouter } from './routes/website';
 
@@ -24,6 +24,9 @@ const swaggerDocument = yamljs.load(path.join(__dirname, 'swagger.yaml'));
 app.use('/api/docs', swagger.serve, swagger.setup(swaggerDocument, { explore: true }));
 
 app.use(GoogleAuthenticationMiddleware.handle);
+
+app.route('/api/check')
+    .get(CheckRouter.get);
 
 app.route('/api/user')
     .get(UserRouter.get);
